2006-05-26  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: Use Prefere_nces as accesskey for the menu entry,
	not _Prefere_ces, spotted by clytie@riverland.net.au (Closes: #343014)

2006-05-26  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: Fix duplicate 's' accesskey (Closes: #323858)

2006-05-25  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-disc.c: (cd_cache_new): add missing HAVE_HAL ifdef,
	spotted by James Livingston <jrl@ids.org.au>

2006-05-25  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-disc.c: (cd_cache_open_device): remove dead code

2006-05-25  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-disc.c: (cd_cache_free): Disconnect from HAL
	when we're done with the work

2006-05-25  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-disc.c: (cd_cache_new_hal_ctx),
	(cd_cache_has_medium): Fix build and run-time with HAL >= 0.5

2006-05-25  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/plparse/Makefile.am:
	* src/plparse/totem-disc.c: (cd_cache_new_hal_ctx), (cd_cache_new),
	(cd_cache_has_medium), (cd_cache_open_device), (cd_cache_free),
	(cd_cache_disc_is_cdda), (cd_cache_disc_is_dvd):
	Use HAL to detect whether a disc is present in the device, rather
	than using Linux specific calls. No HAL means that the disc detection
	will return FALSE (Closes: #316902)

2006-05-23  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.in:
	  Add the 'goom' plugin from gst-plugins-good to the list of
	  required plugins for the GStreamer backend.

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_stop_play_pipeline), (setup_vis_find_factory), (setup_vis):
	  Fix visualisation factory lookup: check for short name if we
	  don't find a match with the long name (necessary because the
	  schema contains a short name). Use 'goom' as fallback if we
	  can't find the visualisation originally configured. Fixes #340506.

2006-05-22  Bastien Nocera  <hadess@hadess.net>
