@@ -112,7 +112,7 @@ fi
 
 if test x$HAVE_XINE = xno; then
 	GST_REQS=0.10.1
-	GSTPLUG_REQS=0.10.1
+	GSTPLUG_REQS=0.10.7
 	MM="gstreamer-0.10 >= $GST_REQS gstreamer-plugins-base-0.10 >= $GSTPLUG_REQS gconf-2.0"
 	PKG_CHECK_MODULES(GST, $MM,
 			HAVE_GSTREAMER=yes, HAVE_GSTREAMER=no)
